--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -15,6 +15,8 @@ jobs:
   ci:
     name: Unit tests
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       # ...
       - uses: actions/checkout@v4
